<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CreditCounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_time">学期</string>
    <string name="img_dis">标题</string>
    <string name="input_sunject">学科</string>
    <string name="input_fenshu">分数</string>
    <string name="input_credit">学分</string>
    <string name="input_tishi">提示</string>
    <string name="input_tishicontent">content</string>

</resources>
